--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script src="https://www.google.com/recaptcha/api.js?render=%REACT_APP_RECAPTCHA_SITE_KEY%"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
